syntax = "proto3";

option go_package="main";

message HelloRequest {
    string Name = 1;
}

message HelloResponse {
    string Welcome = 1;
}

service HelloService {
    rpc SayHello(HelloRequest) returns (HelloResponse) {};
}

